impelement JOIN command

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,8 @@ set(CMAKE_CXX_STANDARD 98)
 file (GLOB_RECURSE IRC_SRCS
         main.cpp
         srcs/*.cpp
+        srcs/*/*.cpp
 )
 
 add_executable(ircserv ${IRC_SRCS})
-target_compile_options(ircserv PRIVATE -Wall -Wextra)
+target_compile_options(ircserv PRIVATE -Wall -Wextra -g)
